# pingo-py

./: .gitignore  pyproject.toml  ruff.toml
pingo/: __init__.py  board.py  test_utils.py  util.py
pingo/arduino/: firmata.py  pyun.py  pyun_tests.py  test_util_firmata.py  util_firmata.py
pingo/arduino/examples/: analog_demo.py  dojo.py  snake.py  wild_snake.py
pingo/arduino/tests/: test_arduino.py
pingo/bbb/: bbb.py
pingo/bbb/tests/: test_bbb.py
pingo/detect/: detect.py  test_detect.py
pingo/examples/: analog_bars.py  blink.py  blink_firmata.py  blink_firmata_auto.py  dimmer.py  dojo.py  dojo2.py  dojoxxl.py  double_blink.py  dual_analog_bars.py  dualboard.py  galileo_analog_bars.py  galileo_garoa_dojo_shield.py  garoa7seg.py  map7segment.py  pongo.py  probe_pins.py  pwm.py  rgb_led.py  switch.py
pingo/examples/parts/: led_demo.py
pingo/examples/pushbutton_led/: pushbutton_led.py
pingo/examples/rpi_examples/: display7.py  display7_anim.py  display7_snake.py  dojo_display7.py  pin_map.py
pingo/ghost/: ghost.py
pingo/ghost/examples/: drill.py  drill_sensors.py
pingo/ghost/tests/: test_ghost.py
pingo/intel/: intel.py
pingo/intel/tests/: test_edison.py  test_galileo.py
pingo/iot/: client.py  server.py
pingo/parts/: __init__.py
pingo/pcduino/: pcduino.py
pingo/pcduino/tests/: test_pcduino.py
pingo/rpi/: grove.py  rpi.py
pingo/rpi/tests/: test_rpi.py
pingo/test/: __init__.py
pingo/test/level0/: cases.py
pingo/test/level1/: cases.py
pingo/test/level2/: cases.py
pingo/udoo/: udoo.py
pingo/udoo/examples/: blink.py
(+1 files in other folders)
