[tool.poetry]
name = "pingo"
version = "0.3.0"
description = "Generic API to control boards with programmable IO pins."
authors = ["Pingo Team @ Garoa Hacker Clube"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.8"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=pingo"
testpaths = [""]
log_level = "DEBUG"
filterwarnings = []
